# c11-raytracer-fundamentals

./: .gitignore  CMakeLists.txt  GOLDEN_PROMPT.md  README.md  ROADMAP.md
docs/: 00_overview.md  01_vector_math.md  02_ray_and_camera.md  03_intersection.md  04_lighting.md  05_rendering.md
include/: camera.h  ray.h  renderer.h  scene.h  vec3.h
src/: main.c  renderer.c
tests/: test_framework.h  test_intersection.c  test_ray.c  test_renderer.c  test_vec3.c
